# tender-intelligence-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
examples/: tool_calls.json
scripts/: clay_oauth_setup.py
src/tender_intelligence_agent/: __init__.py  config.py  models.py  server.py
src/tender_intelligence_agent/services/: async_bridge.py  briefing.py  clay_adapter.py  clay_client.py  clay_oauth.py  clay_pipeline_sync.py  document_ingestion.py  document_typing.py  openai_tender_analysis.py  qualification.py  sculpt_hack_proxy.py  style_controller.py  workflow_orchestrator.py
tests/: test_async_bridge_and_proxy.py  test_clay_oauth.py  test_document_ingestion.py  test_qualification.py  test_style_controller.py  test_workflow_orchestrator.py
